# qinglong_personal

./: .env.e5.example  .gitignore  AxCNH_monitor.py  Notify.py  QLUtils.py  apple_monitor1.py  apple_monitor2.py  e5_keep_active.py  e5_onedrive_monitor.py  e5_personal_tools.py  e5_storage_sync.py  e5_user_expiration.py  e5_workspace_activity.py  geely.py  glados_signin.py  miit_monitor.py  pyproject.toml  requirements.txt
utils/: notify_utils.py  ql_utils.py
utils/geely/: geely_panda_utils.py  vehicle_utils.py
